fix width on small screens for schumer

--- a/src/styles/_presentation.scss
+++ b/src/styles/_presentation.scss
@@ -131,7 +131,6 @@
   @media only screen and (max-width: $xs) {
     font-size: calc($schumer-font-size * 0.4);
     overflow-x: auto;
-    width: 90vw;
   }
 
   @media only screen and (min-width: $sm) {
